# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  gendiff.py  generate_diff.py  parser.py
gendiff/formatters/: formatter.py  json.py  json_format.py  plain.py  stylish.py
gendiff/read_files/: argparse.py  cli.py  parser.py
gendiff/scripts/: diff.py  gendiff.py  generate_diff.py
tests/: test_gendiff.py  test_gendiff_yaml.py
tests/fixtures/: file1.yaml  file1.yml  file2.yml  json_result.json
