[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Arina Khokhlova <khokhlova.arina.v@gmail.com>"]
readme = "README.md"
repository = "https://github.com/nyanyapushkina/python-project-50"
classifiers = [
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Private :: Do Not Upload",
]

packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
generate_diff = "gendiff.scripts.generate_diff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
